2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Moved implementations of
	member functions for externproto_node_class,
	externproto_node_type, and externproto_node after Vrml97Parser and
	X3DVrmlParser have been included.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::proto_node::create_exposedfield): Take a proto_node as
	an argument rather than an abstract_proto_node.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Moved
	openvrml::abstract_proto_node::proto_exposedfield to
	openvrml::proto_node::proto_exposedfield.  externproto_node
	doesn't need this.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Doc-comment fixes.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Moved
	::proto_node_class::proto_node_type to ::proto_node_type.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Removed trailing
	whitespace.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (create_root_scope): Take a
	reference to a const openvrml::browser as an argument.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	Made create_root_scope a nonmember function.

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(Vrml97Parser::vrmlScene): Changed to use ::create_root_scope.
	* src/libopenvrml/openvrml/X3DVrmlParser.g
	(X3DVrmlParser::vrmlScene): Changed to use ::create_root_scope.
	* src/libopenvrml/openvrml/browser.cpp: Made create_root_scope a
	nonmember function.
	* src/libopenvrml/openvrml/browser.h: Removed
	openvrml::browser::create_root_scope.

2005-11-26 Braden McDaniel  <braden@endoframe.com>

	Exposed means to add and retrieve node_classes from the browser's
	node_class map as part of openvrml::browser's public interface.
